--- a/build.gradle
+++ b/build.gradle
@@ -29,3 +29,6 @@ subprojects {
     apply from: "$rootDir/versions.gradle"
 }
     
+dependencyCheck {
+	suppressionFile "${rootDir}/owasp/suppressions.xml"
+}
