--- a/mailspy-frontend/package.json
+++ b/mailspy-frontend/package.json
@@ -14,10 +14,25 @@
     "author": "xylan.org",
     "license": "MIT",
     "dependencies": {
-        "@craco/craco": "6.1.1",
         "@fortawesome/fontawesome-svg-core": "1.2.32",
         "@fortawesome/free-solid-svg-icons": "5.15.1",
         "@fortawesome/react-fontawesome": "0.1.13",
+        "autobind-decorator": "2.4.0",
+        "bootstrap": "4.5.3",
+        "escape-html": "1.0.3",
+        "file-saver": "2.0.5",
+        "inversify": "5.0.5",
+        "inversify-react": "0.4.3",
+        "mailparser": "3.5.0",
+        "moment": "2.29.3",
+        "raf": "3.4.1",
+        "react": "17.0.1",
+        "react-bootstrap": "1.4.0",
+        "react-dom": "17.0.1",
+        "reflect-metadata": "0.1.13"
+    },
+    "devDependencies": {
+        "@craco/craco": "6.1.1",
         "@sinonjs/fake-timers": "7.0.5",
         "@types/enzyme": "3.10.8",
         "@types/escape-html": "1.0.0",
@@ -32,28 +47,15 @@
         "@typescript-eslint/eslint-plugin": "4.15.0",
         "@typescript-eslint/parser": "4.15.0",
         "@wojtekmaj/enzyme-adapter-react-17": "0.6.0",
-        "autobind-decorator": "2.4.0",
         "babel-plugin-transform-typescript-metadata": "0.3.1",
-        "bootstrap": "4.5.3",
         "enzyme": "3.11.0",
-        "escape-html": "1.0.3",
         "eslint-config-prettier": "8.5.0",
         "eslint-output": "3.0.1",
-        "file-saver": "2.0.5",
-        "inversify": "5.0.5",
-        "inversify-react": "0.4.3",
         "jest": "26.6.0",
         "jest-mock-extended": "1.0.13",
         "jest-when": "3.3.1",
-        "mailparser": "3.0.1",
-        "moment": "2.29.1",
         "prettier": "2.6.2",
-        "raf": "3.4.1",
-        "react": "17.0.1",
-        "react-bootstrap": "1.4.0",
-        "react-dom": "17.0.1",
         "react-scripts": "4.0.1",
-        "reflect-metadata": "0.1.13",
         "ts-jest": "26.5.4",
         "typescript": "4.2.3"
     },
