--- a/mailspy-frontend/package.json
+++ b/mailspy-frontend/package.json
@@ -78,7 +78,8 @@
         "typescript": "4.9.5"
     },
     "overrides": {
-        "@svgr/webpack": "6.5.1"
+        "@svgr/webpack": "6.5.1",
+        "optionator": "0.9.3"
     },
     "browserslist": [
         ">0.2%",
